--- a/index.html
+++ b/index.html
@@ -5,43 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
     <div class="header">
         <ul>
-            <li class="logo">Gabriel Llerena Quenaya</li>
-            <li class="options">Facebook</li>
-            <li class="options">Linkedin</li>
-            <li class="options">Github</li>
+            <li class="logo"><a href="">Final Project</a></li>
+            <li class="option1"><a href="">Facebook</a></li>
+            <li>|</li>
+            <li class="option2"><a href="">Linkedin</a></li>
+            <li>|</li>
+            <li class="option3"><a href=""> Github</a></li>
         </ul>
     </div>
 
     <div class="container1">
         <ul>
-            <li class="title1">MY FIRST LANDING PAGE</li>
+            <li class="title1">My First</li>
+            <li class="title1">Landing Page</li>
             <li class="text1">This website shows you that there is nothing that you can't do</li>
-            <button>Contact me</button>
+            <button><a href="">Contact me</a></button>
         </ul>
-        <img src="/Images/Image1.jpg" alt="Success">
+        <img src="Images/Image1.jpg" alt="Success" width="300" height="200">
     </div>
 
+    <div class="title2">What I like</div>
+
     <div class="container2">
-        <div class="title2">What I like</div>
-        <div class="section1">
-            <img src="">
+        <div class="section">
+            <img src="Images/Image2.jpg" alt="Tech World" width="180" height="180">
             <div class="text2">Tech World</div>
         </div>
-        <div class="section2">
-            <img src="">
+        <div class="section">
+            <img src="Images/Image3.jpg" alt="Sports" width="180" height="180">
             <div class="text2">Sports</div>
         </div>
-        <div class="section3">
-            <img src="">
+        <div class="section">
+            <img src="Images/Image4.jpg" alt="Music" width="180" height="180">
             <div class="text2">Music</div>
         </div>
-        <div class="section4">
-            <img src="">
+        <div class="section">
+            <img src="Images/Image5.jpg" alt="Teaching" width="180" height="180">
             <div class="text2">Teaching</div>
         </div>
     </div>
