--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
             <li class="title1">My First</li>
             <li class="title1">Landing Page</li>
-            <li class="text1">This website shows you that there is nothing that you can't do</li>
+            <li class="text1">This website shows you that there is nothing that you can't do.</li>
             <button><a href="">Contact me</a></button>
         </ul>
         <img src="Images/Image1.jpg" alt="Success" width="300" height="200">
@@ -62,12 +62,12 @@
                 <div class="title3">Call to action! It's time!</div>
                 <div class="text3">Do you want to share projects with me?</div>
             </div>
-            <button>Contact me</button>
+            <button><a href="">Contact me</button></a>
         </div>
     </div>
 
     <footer>
-        <div>Copyright © The Odin Project 2021</div>
+        <div><strong>Copyright © </strong>The Odin Project 2021</div>
     </footer>
 </body>
 </html>
